<resources>
    <string name="app_name">s164150 Christian Andersen Nøddeboe Hangman</string>

    <string name="exit_confirm1">ARE YOU SURE  YOU WANT TO  EXIT?</string>
    <string name="exit_confirm2">ALL PROGRESSION  WILL BE LOST!</string>

    <string name="yes">YES</string>
    <string name="no">NO</string>

    <string name="wontitle">YOU WON!</string>
    <string name="guesses">TOTAL GUESSES:</string>
    <string name="score">SCORE:</string>

    <string name="losttitle">YOU LOST..</string>
    <string name="wordwas">WORD WAS:</string>

    <string name="again">PLAY AGAIN?</string>

    <string name="highscoretitle">HIGHSCORES</string>

    <string name="settingstitle">SETTINGS</string>

    <string name="back">BACK</string>

    <string name="disable">DISABLE</string>
    <string name="enable">ENABLE</string>

    <string name="abouttitle">ABOUT</string>
    <string name="creator">CREATOR:</string>
    <string name="creatorname">CHRISTIAN A. NØDDEBOE</string>
    <string name="version">VERSION:</string>
    <string name="versionnum">1.0</string>
    <string name="studynum">STUDY NUMBER:</string>
    <string name="studynumber">s164150</string>

</resources>
